# ExamVision

./: .env.example  .gitignore  .pre-commit-config.yaml  Context.txt  Implementation.txt  README.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  ruff.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_students_events_alerts.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  repository.py  session.py
backend/app/models/: db.py
backend/app/schemas/: events.py
backend/app/services/behaviour/: __init__.py  analyser.py  models.py  utils.py
backend/app/services/detection/: __init__.py  models.py  pipeline.py  post_processor.py  yolo_detector.py
backend/app/services/face/: __init__.py  face_detector.py  models.py  utils.py
backend/app/services/gaze/: __init__.py  gaze_estimator.py  models.py  utils.py
backend/app/services/logging/: __init__.py  alert_manager.py  event_logger.py
backend/app/services/phone/: __init__.py  models.py  phone_detector.py
backend/app/services/pose/: __init__.py  keypoints.py  pipeline.py  pose_estimator.py  utils.py
backend/tests/: test_behaviour.py  test_detection_post_processor.py  test_event_logger.py  test_face.py  test_frame_utils.py  test_gaze.py  test_integration.py  test_phone.py  test_pose.py  test_report_generator.py  test_repositories.py  test_scoring.py  test_tracking.py  test_video_models.py  test_video_preprocessor.py  test_video_sources.py  test_ws_manager.py
(+47 files in other folders)
