[project]
name = "proctor"
version = "0.1.0"
description = "AI-powered exam proctoring system"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "opencv-python-headless>=4.9.0",
    "ultralytics>=8.3.0",
    "mediapipe>=0.10.0",
    "numpy>=1.26.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "reportlab>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "coverage>=7.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["UP017"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
